fixing spacing, video

--- a/Assets/styles/past_projects.css
+++ b/Assets/styles/past_projects.css
@@ -449,7 +449,7 @@ and (max-width: 1008px) {
     margin-top: 1rem;
   }
   article video {
-    width: 270px;
+    width: 230px;
   }
   section#photos picture,
   section#photos picture source,
